--- a/requirements.txt
+++ b/requirements.txt
@@ -1,373 +1,58 @@
-appdirs==1.4.4
-applaunchservices==0.3.0
-appnope==0.1.2
-appscript==1.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-astroid==2.14.2
-astropy==5.1
-asttokens==2.0.5
-atomicwrites==1.4.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.0
 attrs==24.2.0
-Automat==20.2.0
-autopep8==1.6.0
-Babel==2.11.0
-backports.functools-lru-cache==1.6.4
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.2.0
-beautifulsoup4==4.12.2
-binaryornot==0.4.4
-black==0.0
-bleach==4.1.0
-blis==0.7.11
-boltons==23.0.0
-Bottleneck==1.3.5
-Brotli==1.1.0
-brotlipy==0.7.0
-cachetools==5.3.1
-catalogue==2.0.10
-certifi==2023.7.22
-cffi==1.15.1
-cfgv==3.4.0
+blinker==1.8.2
+certifi==2024.8.30
 chardet==4.0.0
-charset-normalizer==2.0.4
+charset-normalizer==3.3.2
 click==8.1.7
-clyent==1.2.2
-colorama==0.4.6
-colorcet==3.0.1
-conda==23.7.4
-conda-content-trust==0.2.0
-conda_index==0.3.0
-conda_package_streaming==0.9.0
-conda-repo-cli==1.0.75
-conda-token==0.4.0
-conda-verify==3.4.2
-confection==0.1.3
-constantly==15.1.0
-contourpy==1.0.5
-coverage==7.3.2
-cryptography==41.0.3
-cssselect==1.1.0
-cycler==0.11.0
-cymem==2.0.8
-cytoolz==0.12.0
 dataclasses==0.6
-datasets==2.12.0
-datashape==0.5.4
-dateparser==1.2.0
-de-autobahn==1.0.4
-de-dwd==1.0.1
-de-interpol==0.1.0
-de-jobsuche==0.1.0
-de-ladestationen==1.0.5
-de-mudab==0.1.0
-de-polizei-brandenburg==0.1.0
-de-risikogebiete==0.1.0
-de-smard==0.1.0
-de-strahlenschutz==1.0.0
-de-travelwarning==0.1.0
-de-weiterbildungssuche==0.1.0
-de-zoll==0.1.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
 deprecation==2.1.0
-diff-match-patch==20200713
-dill==0.3.6
-distlib==0.3.7
-dnspython==2.4.2
-docstring-to-markdown==0.11
-duckduckgo-search==3.9.2
-en-core-web-sm==3.4.0
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==0.8.3
-fastjsonschema==2.16.2
-filelock==3.12.4
-flake8==6.0.0
-Flask==2.2.2
+Flask==3.0.3
 Flask-Cors==5.0.0
-flatbuffers==24.3.25
-fonttools==4.25.0
-frozenlist==1.3.3
-fsspec==2023.4.0
-future==0.18.3
-glob2==0.7
-gmpy2==2.1.2
-google-api-core==2.12.0
-google-api-python-client==2.102.0
-google-auth==2.23.2
-google-auth-httplib2==0.1.1
-googleapis-common-protos==1.60.0
-gotrue==0.2.0
-greenlet==2.0.1
+frozenlist==1.4.1
+gotrue==2.8.1
 h11==0.14.0
 h2==4.1.0
-h5py==3.9.0
-HeapDict==1.0.1
 hpack==4.0.0
-httpcore==0.12.3
-httplib2==0.22.0
-httpx==0.16.1
-humanfriendly==10.0
+httpcore==1.0.5
+httpx==0.27.2
 hyperframe==6.0.1
-hyperlink==21.0.0
-identify==2.5.30
 idna==2.10
-imagecodecs==2023.1.23
-imageio==2.31.1
-imagesize==1.4.1
-imbalanced-learn==0.10.1
-importlib-metadata==6.0.0
-incremental==21.3.0
-inflection==0.5.1
-iniconfig==1.1.1
-intake==0.6.8
-intervaltree==3.1.0
-ipykernel==6.25.0
-ipython==8.15.0
-ipython-genutils==0.2.0
-isort==5.9.3
-itemadapter==0.3.0
-itemloaders==1.0.4
-itsdangerous==2.0.1
-jaraco.classes==3.2.1
-jedi==0.18.1
-jellyfish==1.0.1
-Jinja2==3.1.2
-jinja2-time==0.2.0
-jmespath==0.10.0
-joblib==1.2.0
-json5==0.9.6
-jsonpatch==1.32
-jsonpointer==2.1
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_server_fileid==0.9.0
-jupyter_server_ydoc==0.8.0
-kaleido==0.2.1
-keyring==23.13.1
-kiwisolver==1.4.4
-lazy_loader==0.2
-lazy-object-proxy==1.6.0
-libarchive-c==2.9
-libmambapy==1.5.1
-linkify-it-py==2.0.0
-llvmlite==0.40.0
-lmdb==1.4.1
-locket==1.0.0
-loguru==0.7.2
-lxml==4.9.3
-lz4==4.3.2
-mapbox-vector-tile==2.1.0
-Markdown==3.4.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.1
-mccabe==0.7.0
-mdit-py-plugins==0.3.0
-mdurl==0.1.0
-mistune==0.8.4
-more-itertools==8.12.0
-mpmath==1.3.0
-msgpack==1.0.3
-multidict==6.0.2
-multipledispatch==0.6.0
-munkres==1.1.4
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-navigator-updater==0.4.0
-nbclient==0.5.13
-nbconvert==6.5.4
-nbformat==5.9.2
-nest-asyncio==1.5.6
-networkx==3.1
-nodeenv==1.8.0
-notebook_shim==0.2.2
-numexpr==2.8.4
-numpy==1.24.3
-oauthlib==3.2.2
-openpyxl==3.0.10
-orjson==3.9.7
-outcome==1.2.0
-packaging==23.1
-pandocfilters==1.5.0
-param==1.13.0
-parsel==1.6.0
-parso==0.8.3
-partd==1.4.0
-pathlib==1.0.1
-pathspec==0.10.3
-pathy==0.10.2
-patsy==0.5.3
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==10.4.0
-pinecone-client==2.2.1
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+multidict==6.1.0
+packaging==24.1
 pip==23.2.1
-pkce==1.0.3
-pkginfo==1.9.6
-platformdirs==3.10.0
-plotly==5.9.0
-pluggy==1.0.0
-ply==3.11
+pluggy==1.5.0
 postgrest==0.16.11
 postgrest-py==0.4.0
-poyo==0.5.0
-pre-commit==3.4.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.36
-Protego==0.1.16
-protobuf==5.28.2
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
+psycopg2==2.9.9
 py==1.11.0
-py-cpuinfo==8.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyclipper==1.3.0.post5
-pycodestyle==2.10.0
-pycosat==0.6.4
-pycparser==2.21
-pyct==0.5.0
-pycurl==7.45.2
-PyDispatcher==2.0.5
-pydocstyle==6.3.0
-pyerfa==2.0.0
-pyflakes==3.0.1
-Pygments==2.15.1
-PyJWT==2.4.0
-pylint==2.16.2
-pylint-venv==2.3.0
-pyls-spyder==0.4.0
-pyobjc-core==9.0
-pyobjc-framework-Cocoa==9.0
-pyobjc-framework-CoreServices==9.0
-pyobjc-framework-FSEvents==9.0
-pyOpenSSL==23.2.0
-pyparsing==3.0.9
-PyQt5-sip==12.11.0
-pyrsistent==0.18.0
-PySocks==1.7.1
-pytest-cov==4.1.0
-pytest-integration==0.2.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-lsp-black==1.2.1
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.7.2
-python-slugify==5.0.2
-python-snappy==0.6.1
-pytoolconfig==1.2.5
-pytz==2023.3.post1
-pyviz-comms==2.3.0
-PyYAML==6.0
-pyzmq==23.2.0
-QDarkStyle==3.0.2
-qstylizer==0.2.2
-QtAwesome==1.2.2
-qtconsole==5.4.2
-QtPy==2.2.0
-queuelib==1.5.0
-readability-lxml==0.8.1
+pydantic==1.10.18
+pydantic_core==2.23.4
+pytest==6.2.5
+python-dateutil==2.9.0.post0
 realtime==2.0.2
 realtime-py==0.1.3
-regex==2022.7.9
-requests==2.32.3
-requests-file==1.5.1
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-responses==0.13.3
-rfc3339-validator==0.1.4
+requests==2.25.1
 rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rope==1.7.0
-rsa==4.9
-Rtree==1.0.1
-ruamel.yaml==0.17.21
-ruamel-yaml-conda==0.17.21
-safetensors==0.3.2
-Send2Trash==1.8.0
-service-identity==18.1.0
 setuptools==68.0.0
-shapely==2.0.6
-sip==6.6.2
 six==1.16.0
-smart-open==5.2.1
-smmap==5.0.1
-sniffio==1.2.0
-snowballstemmer==2.2.0
-socksio==1.0.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-spyder==5.4.3
-spyder-kernels==2.4.4
-SQLAlchemy==1.4.39
-stack-data==0.2.0
+sniffio==1.3.1
 storage3==0.7.7
 StrEnum==0.4.15
 supabase==2.7.4
-supabase-py==0.0.2
 supafunc==0.5.1
-sympy==1.11.1
-tables==3.8.0
-tabulate==0.8.10
-tblib==1.7.0
-tenacity==8.2.2
-terminado==0.17.1
-text-unidecode==1.3
-textdistance==4.2.1
-threadpoolctl==2.2.0
-three-merge==0.1.1
-tifffile==2023.4.12
-tiktoken==0.3.3
-tinycss2==1.2.1
-tldextract==3.2.0
 toml==0.10.2
-tomlkit==0.11.1
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.7.1
-trio==0.22.2
-trio-websocket==0.11.1
-tweepy==4.14.0
-Twisted==22.10.0
-typer==0.7.0
 typing_extensions==4.12.2
-tzdata==2023.3
-tzlocal==5.2
-uc-micro-py==1.0.1
-ujson==5.4.0
-Unidecode==1.2.0
-uritemplate==4.1.1
-urllib3==1.26.16
-virtualenv==20.24.5
-w3lib==1.21.0
-wasabi==0.10.1
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.58.0
-websockets==9.1
-Werkzeug==2.2.3
-whatthepatch==1.0.2
+urllib3==1.26.20
+websockets==12.0
+Werkzeug==3.0.4
 wheel==0.38.4
-wrapt==1.14.1
-wsproto==1.2.0
-wurlitzer==3.0.2
-xlwings==0.29.1
-xxhash==2.0.2
-xyzservices==2022.9.0
-y-py==0.5.9
-yapf==0.31.0
-yarl==1.8.1
-ypy-websocket==0.8.2
-zict==2.2.0
-zipp==3.11.0
-zope.interface==5.4.0
-zstandard==0.19.0
+yarl==1.11.1
