--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
+APScheduler==3.10.4
 attrs==24.2.0
 blinker==1.8.2
 certifi==2024.8.30
@@ -38,6 +39,7 @@ pydantic==1.10.18
 pydantic_core==2.23.4
 pytest==6.2.5
 python-dateutil==2.9.0.post0
+pytz==2024.2
 realtime==2.0.2
 requests==2.25.1
 rfc3986==1.5.0
@@ -50,6 +52,7 @@ supabase==2.7.4
 supafunc==0.5.1
 toml==0.10.2
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==1.26.20
 websockets==12.0
 Werkzeug==3.0.4
